--- a/styles/css/vtex.theme.css
+++ b/styles/css/vtex.theme.css
@@ -21,4 +21,13 @@
 
 .infoCardContainer--vintage {
     background-color: #edcfd1
-  }
+}
+
+.infoCardContainer {
+    max-width: 1260px;
+    margin: 0 auto;
+}
+
+.infoCardHeadline {
+    color: black;
+}
