--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -23,6 +23,10 @@
     background-color: #edcfd1
 }
 
+.infoCardContainer--metal {
+    background-color: #e1e1e1
+}
+
 .infoCardContainer {
     max-width: 1260px;
     margin: 0 auto;
@@ -30,4 +34,9 @@
 
 .infoCardHeadline {
     color: black;
+    font-weight: bold;
+}
+
+.infoCardCallActionContainer:hover {
+    color: white;
 }
